# recommendation-engine

./: .gitignore  README.md  history.json  main.py  pyproject.toml  quick_analysis.ipynb  recommendation.json  requirements.txt
coppermind_crawler/: scrapy.cfg
coppermind_crawler/coppermind_crawler/: items.py  middlewares.py  pipelines.py  settings.py
coppermind_crawler/coppermind_crawler/spiders/: coppermind_scraper.py
data/: articles.csv  articles_preprocessed.csv  vectorizer.joblib
recommendation_engine/: build_index.py  preprocess.py
