[tool.poetry]
name = "recommendation-engine"
version = "0.1.0"
description = ""
authors = ["Wojciechm-AdapptLimited <wojciech.channel@gmail.com>"]
readme = "README.md"
packages = [{include = "recommendation_engine"}]

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"
Scrapy = "^2.11.0"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
